--- a/list.html
+++ b/list.html
@@ -23,8 +23,12 @@
         </li>
         <li>
             hello rishi
-        </li> <li>
+        </li>
+         <li>
             hello rishi
+        </li>
+        <li>
+            hello hello
         </li>
     </ul>
     
